Trying to fix layout issue-

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,10 +8,6 @@
   box-sizing: border-box;
 }
 
-:root {
-  --viewport-height: 100vh;
-}
-
 html,
 body {
   height: 100%;
@@ -34,22 +30,16 @@ body::before {
   z-index: -1;
 }
 
-.wrapper {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-  z-index: 1;
-}
-
 .content {
   flex: 1;
   width: 100%;
   position: relative;
 }
-
-.glassBackground {
-  @apply bg-white bg-opacity-10 backdrop-blur-lg backdrop-filter;
+.defaultBackground {
+  @apply bg-[radial-gradient(ellipse_at_top,_var(--tw-gradient-stops))] from-black via-[#2D1736] to-black;
+  background-size: 130%;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
 .primary-btn {
@@ -57,11 +47,11 @@ body::before {
 }
 
 .secondary-btn {
-  @apply border-2 border-[#4B0082] hover:bg-[#4B0082]/30 transition-all duration-300 ease-in-out;
+  @apply border-2 border-[#4B0082]  hover:bg-[#4B0082]/30 transition-all duration-300 ease-in-out;
 }
 
-.defaultBackground {
-  display: none;
+.backdrop-blur-md {
+  backdrop-filter: blur(10px);
 }
 
 input[type='date']::-webkit-calendar-picker-indicator {
